tests/snapshot/error/source_locations/expression/yield_star/next_check_iterator_result_object_throws.js
var iterable = {
  [Symbol.iterator]() {
    return {
      next() {
        return 1;
      }
    };
  }
}

function *generator() {
  yield* iterable;
}

let iter = generator();
iter.next();